# agentic-pdf2md

./: LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: llm-integration.md
src/agentic_pdf2md/: __init__.py  config.py  exceptions.py  options.py
src/agentic_pdf2md/models/: cancellation_token.py  llm_messages.py  llm_runner.py  markdow_rep.py  processed_pdf.py  processing_future.py  progress_reporter.py  raw_pdf.py
src/agentic_pdf2md/workflows/: parallel_processing.py  pdf_processing.py  serial_processing.py
tests/: __init__.py  conftest.py  fake_llm_runner.py  test_processed_pdf_config.py  test_processed_pdf_edge_cases.py  test_processed_pdf_errors.py  test_processed_pdf_images.py  test_processed_pdf_initialization.py  test_processed_pdf_pages.py  test_raw_pdf.py
