[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentic-pdf2md"
dynamic = ["version"]
description = "AI-powered PDF to Markdown converter using LLM agents"
authors = [
    {name = "Jean-Xavier Raynaud", email = "jxraynaud@gmail.com"},
]
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Markup :: Markdown",
]
dependencies = [
    "PyMuPDF>=1.25.0",
]
keywords = ["pdf", "markdown", "conversion", "ai", "llm", "agents"]

[project.urls]
Homepage = "https://github.com/BotResources/agentic-pdf2md"
Repository = "https://github.com/BotResources/agentic-pdf2md"
Issues = "https://github.com/BotResources/agentic-pdf2md/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[tool.hatch.version]
path = "src/agentic_pdf2md/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/README.md",
    "/LICENSE",
]

[tool.hatch.build.targets.wheel]
packages = ["src/agentic_pdf2md"]